# Robo-Studio2

./: .gitignore  GUI_2.py  README.md
Full Implimentation/: GUI.py
archive/planning/: CMakeLists.txt  package.xml
archive/planning/src/: test_publish_node.py
control/: CMakeLists.txt  README.md  package.xml
control/archive/: mtc_node.cpp
control/config/: ur3e.srdf
control/launch/: mtc_test.launch.py
control/src/: main.cpp  mtc_moveit.cpp  mtc_node.cpp  rs_moveit.cpp  ur3_control.cpp  ur3_control.hpp
docs/: Endefector Top Single Marker.stl  Endefector Top.stl  Ur3e Head_Endefector Base.stl
gui/gui/: gui_node.py
imageProcessing_tests/: faceContours.py  faceEdges.py  image_processor.py  webcam_processing.py
img_processor/: img_processor  svg_processor.py
log/: latest_list
planning/: CMakeLists.txt
planning/src/: planning.py
py_planning/: setup.cfg  setup.py
py_planning/py_planning/: planner.py  planning.py  pose_planner_node.py  test_publish_node.py
src/: requirements.txt
src/Full Implimentation/: processing_node.py
src/archive/planning/: CMakeLists.txt  package.xml
src/control/: CMakeLists.txt  package.xml
src/control/archive/: rs_moveit.cpp
src/control/config/: ompl_planning.yaml  ur3e.urdf
src/control/src/: test_publish_node.cpp  ur3_control.cpp  ur3_control.hpp
src/gui/: package.xml  setup.py
src/gui/gui/: Gazebo Tutorial.txt  gui_node.py
src/gui/launch/: bringup.launch.py
src/img_processor/: README.md  TESTS.ipynb  img_processor.py
src/img_processor/archive/: img_processor.py
src/img_processor/subsystem_test_img_p/: TESTS.ipynb
src/launch/: robo_da_vinci_launch.py
src/py_planning/: package.xml  setup.py
src/py_planning/py_planning/: pose_planner_node.py  pose_sequence_builder.py  processing_node.py  test_tsp.py  tsp.py  visual_utils.py
src/py_planning/py_planning/tsp_files/: selfie_draw.tsp
src/py_planning/py_planning/visual_testing/: visual_tests.py
src/py_planning/test/: planning_tests.py
src/py_planning/visual_testing/: visual_tests.py
src/robo_da_vinci/: package.xml  setup.cfg  setup.py
src/robo_da_vinci/launch/: run_all.launch.py
src/robo_da_vinci/robo_da_vinci/: img_processor.py  lkh_file_generator.py  lkh_utils.py  processing_node.py  test_tsp.py  tsp.py
src/robo_da_vinci/robo_da_vinci/gui/: gui_node.py
src/robo_da_vinci/robo_da_vinci/image_processing/: img_processor.py  img_processor2.py
src/robo_da_vinci/robo_da_vinci/py_planning/: lkh_utils.py  pose_sequence_builder.py  processing_node.py  test_tsp.py
src/robo_da_vinci/robo_da_vinci/py_planning/tsp_files/: selfie_draw.clusters
src/robo_da_vinci/robo_da_vinci/py_planning/visual_testing/: visual_utils.py
src/tsp_files/: selfie_draw.par
