<?xml version="1.0"?>
<package format="3">
  <name>gui</name>
  <version>0.0.1</version>
  <description>Camera GUI + photo_publisher node</description>
  <maintainer email="jesse.gonzalez@student.uts.edu.au">jesse</maintainer>
  <license>Apache-2.0</license>

  <!-- build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>

  <!-- for launch file support -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>