<?xml version="1.0"?>
<package format="3">
  <name>robo_da_vinci</name>
  <version>0.0.1</version>
  <description>Da Vinci drawing GUI + processing + control wrapper</description>

  <!-- 1) Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 2) Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>              <!-- If you’re using launch API -->
  <depend>launch_ros</depend>          <!-- For ROS‑side launch support -->

  <!-- Optional test deps -->
  <test_depend>pytest</test_depend>

  <!-- 3) Tell ament to use the Python builder -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
